Crash with hooks and curves in Cycles render #55000

Closed
opened 2018-05-08 11:26:14 +02:00 by Sebastian Koenig · 9 comments

System Information
elementaryOS 0.4.1, GTX1080

Blender Version
Broken: Blender 2.79.4, c09e22306a
Worked: f74d85ffc8

Short description of error
Blender crashes when I try to render a curve with hooks. In one file it crashes immediately, in a file where I tried to reproduce the crash I have to change current frame a couple of times to make it crash. (See attachment)
Exact steps for others to reproduce the error
Open the attached file with recent master, go to rendered view, change the frame --> crash.
Does not happen with this revision: f74d85ffc8
hook_curve_crash.blend

**System Information** elementaryOS 0.4.1, GTX1080 **Blender Version** Broken: Blender 2.79.4, c09e22306add3e0e1fdff6171eb21e4fde18019e Worked: f74d85ffc8232a859b1419f5dc25b244ae04375f **Short description of error** Blender crashes when I try to render a curve with hooks. In one file it crashes immediately, in a file where I tried to reproduce the crash I have to change current frame a couple of times to make it crash. (See attachment) **Exact steps for others to reproduce the error** Open the attached file with recent master, go to rendered view, change the frame --> crash. Does not happen with this revision: f74d85ffc8232a859b1419f5dc25b244ae04375f [hook_curve_crash.blend](https://archive.blender.org/developer/F3303288/hook_curve_crash.blend)
Author
Member

Added subscriber: @sebastian_k

Added subscriber: @sebastian_k
Bastien Montagne was assigned by Sebastian Koenig 2018-05-08 11:29:32 +02:00

butbutbut… why me????????????

butbutbut… why me????????????

Added subscriber: @ErickNyanduKabongo

Added subscriber: @ErickNyanduKabongo

In #55000#500946, @mont29 wrote:
butbutbut… why me????????????

I don't know why you are always the victim LOL, i did it once. May be you are just good person :)

> In #55000#500946, @mont29 wrote: > butbutbut… why me???????????? I don't know why you are always the victim LOL, i did it once. May be you are just good person :)
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

can confirm this is caused by c09e22306a

can confirm this is caused by c09e22306a

ah, probably mean hook modifier free and/or copy callbacks are doing something nasty! :P Will check.

ah, probably mean hook modifier free and/or copy callbacks are doing something nasty! :P Will check.

This issue was referenced by 49fe27ee46

This issue was referenced by 49fe27ee46b4d9272957c21c13365db322ca8396

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#55000
No description provided.