source/blender/modifiers/intern/MOD_fluidsim.c
@@ -70,14 +70,17 @@ static void copyData(ModifierData *md, ModifierData *target)
 	FluidsimModifierData *fluidmd = (FluidsimModifierData *) md;
 	FluidsimModifierData *tfluidmd = (FluidsimModifierData *) target;
 	
-	fluidsim_free(tfluidmd);
-
 	if (fluidmd->fss) {
 		tfluidmd->fss = MEM_dupallocN(fluidmd->fss);
 		if (tfluidmd->fss && (tfluidmd->fss->meshVelocities != NULL)) {
 			tfluidmd->fss->meshVelocities = MEM_dupallocN(tfluidmd->fss->meshVelocities);
 		}
 	}
+
+	/* Seems to never be used, but for sqke of consistency... */
+	BLI_assert(fluidmd->point_cache == NULL);
+	BLI_assert(tfluidmd->point_cache == NULL);
+	tfluidmd->point_cache = NULL;
 }
 
 
